syntax = "proto3";
import "google/protobuf/any.proto";

service MenuService {
    rpc FetchMenu (IFetchMenu) returns (IMenu) {}
}

message IFetchMenu {
    required string country = 1;
    required bool isDefault =2;
}

message IMenu {
    required string name_en = 1;
    required string name_ar = 2;
    required IStoreAdd address = 3;
    required int32 id = 4;
    required int32 menuTempId = 5;
    required int32 conceptId = 6;
    required int32 menuId = 7;
    required google.protobuf.Any categories = 8;
}

message IStoreAdd {
    required ICoords coords = 1;
    required int32 country = 2;
    required int32 area = 3;
    required IServiceFence service_fence = 4;
}

message ICoords {
    required string type = 1;
    repeated float coordinates = 2;
}

message IServiceFence {
    required string type = 1;
    repeated float coordinates = 2;
}